--- a/Makefile.fm
+++ b/Makefile.fm
@@ -1,15 +1,15 @@
-include Makefile.feature.feature1
+include Makefile.feature.feature4
 
-N = 100
-DIM = 8
-LRATE = 0.0001
+N = 200
+DIM = 4
+LRATE = 0.001
 ALGO_NAME := fm_$(N)_$(DIM)_$(LRATE)
 MODEL_NAME := $(ALGO_NAME)_$(FEATURE_NAME)
 
 METRIC_VAL := $(DIR_METRIC)/$(MODEL_NAME).val.txt
 
 PREDICT_VAL := $(DIR_VAL)/$(MODEL_NAME).val.csv
-PREDICT_TST := $(DIR_VAL)/$(MODEL_NAME).tst.csv
+PREDICT_TST := $(DIR_TST)/$(MODEL_NAME).tst.csv
 
 PREDICT_VAL00 := $(DIR_VAL)/$(MODEL_NAME).val00.csv
 PREDICT_TST00 := $(DIR_TST)/$(MODEL_NAME).tst00.csv
