--- a/Makefile.ftrl
+++ b/Makefile.ftrl
@@ -9,7 +9,7 @@ MODEL_NAME := $(ALGO_NAME)_$(FEATURE_NAME)
 METRIC_VAL := $(DIR_METRIC)/$(MODEL_NAME).val.txt
 
 PREDICT_VAL := $(DIR_VAL)/$(MODEL_NAME).val.csv
-PREDICT_TST := $(DIR_VAL)/$(MODEL_NAME).tst.csv
+PREDICT_TST := $(DIR_TST)/$(MODEL_NAME).tst.csv
 
 PREDICT_VAL00 := $(DIR_VAL)/$(MODEL_NAME).val00.csv
 PREDICT_TST00 := $(DIR_TST)/$(MODEL_NAME).tst00.csv
