--- a/Makefile.libfm
+++ b/Makefile.libfm
@@ -1,15 +1,15 @@
-include Makefile.feature.feature1
+include Makefile.feature.feature4
 
-N = 100
-DIM = 8
-LRATE = 0.01
+N = 400
+DIM = 4
+LRATE = 0.05
 ALGO_NAME := libfm_$(N)_$(DIM)_$(LRATE)
 MODEL_NAME := $(ALGO_NAME)_$(FEATURE_NAME)
 
 METRIC_VAL := $(DIR_METRIC)/$(MODEL_NAME).val.txt
 
 PREDICT_VAL := $(DIR_VAL)/$(MODEL_NAME).val.csv
-PREDICT_TST := $(DIR_VAL)/$(MODEL_NAME).tst.csv
+PREDICT_TST := $(DIR_TST)/$(MODEL_NAME).tst.csv
 
 PREDICT_VAL00 := $(DIR_VAL)/$(MODEL_NAME).val00.csv
 PREDICT_TST00 := $(DIR_TST)/$(MODEL_NAME).tst00.csv
