--- a/Makefile.lr
+++ b/Makefile.lr
@@ -1,4 +1,4 @@
-include Makefile.feature.feature1
+include Makefile.feature.ensemble
 
 C = 0.1
 ALGO_NAME := lr_$(C)
@@ -7,7 +7,7 @@ MODEL_NAME := $(ALGO_NAME)_$(FEATURE_NAME)
 METRIC_VAL := $(DIR_METRIC)/$(MODEL_NAME).val.txt
 
 PREDICT_VAL := $(DIR_VAL)/$(MODEL_NAME).val.csv
-PREDICT_TST := $(DIR_VAL)/$(MODEL_NAME).tst.csv
+PREDICT_TST := $(DIR_TST)/$(MODEL_NAME).tst.csv
 
 PREDICT_VAL00 := $(DIR_VAL)/$(MODEL_NAME).val00.csv
 PREDICT_TST00 := $(DIR_TST)/$(MODEL_NAME).tst00.csv
