--- a/Makefile.nn
+++ b/Makefile.nn
@@ -1,15 +1,15 @@
 include Makefile.feature.feature3
 
-N = 10
-HIDDEN = 16
-LRATE = 0.001
+N = 20
+HIDDEN = 8
+LRATE = 0.01
 ALGO_NAME := nn_$(N)_$(HIDDEN)_$(LRATE)
 MODEL_NAME := $(ALGO_NAME)_$(FEATURE_NAME)
 
 METRIC_VAL := $(DIR_METRIC)/$(MODEL_NAME).val.txt
 
 PREDICT_VAL := $(DIR_VAL)/$(MODEL_NAME).val.csv
-PREDICT_TST := $(DIR_VAL)/$(MODEL_NAME).tst.csv
+PREDICT_TST := $(DIR_TST)/$(MODEL_NAME).tst.csv
 
 PREDICT_VAL00 := $(DIR_VAL)/$(MODEL_NAME).val00.csv
 PREDICT_TST00 := $(DIR_TST)/$(MODEL_NAME).tst00.csv
