--- a/Makefile.rf
+++ b/Makefile.rf
@@ -1,14 +1,14 @@
-include Makefile.feature.feature1
+include Makefile.feature.ensemble
 
-N = 100
-DEPTH = 40
+N = 400
+DEPTH = 10
 ALGO_NAME := rf_$(N)_$(DEPTH)
 MODEL_NAME := $(ALGO_NAME)_$(FEATURE_NAME)
 
 METRIC_VAL := $(DIR_METRIC)/$(MODEL_NAME).val.txt
 
 PREDICT_VAL := $(DIR_VAL)/$(MODEL_NAME).val.csv
-PREDICT_TST := $(DIR_VAL)/$(MODEL_NAME).tst.csv
+PREDICT_TST := $(DIR_TST)/$(MODEL_NAME).tst.csv
 
 PREDICT_VAL00 := $(DIR_VAL)/$(MODEL_NAME).val00.csv
 PREDICT_TST00 := $(DIR_TST)/$(MODEL_NAME).tst00.csv
