Add grid search version for XG, RF, LR. Use single validation instead of 5 CV

--- a/Makefile.feature.esb6_v2
+++ b/Makefile.feature.esb6_v2
@@ -1,19 +1,13 @@
 include Makefile
 
-FEATURE_NAME := esb12
+FEATURE_NAME := esb6_v2
 
-BASE_MODELS := xg_100_8_0.05_feature8 \
-               xg_100_8_0.05_feature1 \
+BASE_MODELS := xg_100_8_0.05_feature5 \
                nn_20_8_0.01_feature3 \
-               nn_20_8_0.01_feature2 \
                libfm_200_4_0.005_feature4 \
-               libfm_200_4_0.005_feature2 \
                fm_200_8_0.001_feature3 \
-               fm_200_4_0.001_feature2 \
                rf_400_40_feature5 \
-               rf_400_40_feature2 \
-               lr_grid_feature4 \
-               lr_grid_feature2
+               lr_0.1_feature4 \
 
 PREDICTS_TRN := $(foreach m, $(BASE_MODELS), $(DIR_VAL)/$(m).val.csv)
 PREDICTS_TST := $(foreach m, $(BASE_MODELS), $(DIR_TST)/$(m).tst.csv)
